# pv-forecast

./: .gitignore  CHANGELOG.md  PROJECT-STATUS.md  README.md  SPEC.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/: battery-health.csv
docs/: ARCHITECTURE_DWD.md  BATTERY-HEALTH.md  CLI.md  CODE-REVIEW.md  CODE_REVIEW_3.md  CONFIG.md  DATA.md  DWD_ARCHITECTURE.md  DWD_IMPLEMENTATION_STATUS.md  ERROR-ANALYSIS.md  FORECAST-ACCURACY.md  GLOSSARY.md  GUI-ANALYSIS.md  HYBRID-KONZEPT.md  MODELS.md  SPEC.md  TESTING_REAL_SYSTEM.md  WEATHER-PROVIDER-REQUIREMENTS.md  WEATHER_DATA_STRATEGY.md  observation-log.md
docs/issues/: 124-opendap-optimization.md
gui/: README.md  mockup.html
scripts/: README_SCRAPER.md  battery-health.sh  daily-forecast.sh  migrate_e3dc_timestamps.sql  perfect_weather_backtest.py  scrape_ertragsdatenbank.py
src/pvforecast/: __init__.py  __main__.py  _version.py  cli.py  confidence.py  config.py  data_loader.py  db.py  doctor.py  forecast_accuracy.py  geocoding.py  model.py  setup.py  validation.py  weather.py
src/pvforecast/cli/: __init__.py  __main__.py  commands.py  formatters.py  helpers.py  parser.py
src/pvforecast/sources/: __init__.py  base.py  hostrada.py  mosmix.py  openmeteo.py
tests/: conftest.py  test_confidence.py  test_config.py  test_data_loader.py  test_db.py  test_dependency_check.py  test_doctor.py  test_e2e.py  test_forecast_accuracy.py  test_geocoding.py  test_model.py  test_poa.py  test_reset.py  test_setup.py  test_sources.py  test_validation.py  test_weather.py
