[project]
name = "pvforecast"
version = "0.1.0"
description = "PV-Ertragsprognose auf Basis historischer Daten und Wettervorhersage"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marcus", email = "marcus@schlappa.de" }]
keywords = ["pv", "solar", "forecast", "photovoltaic", "energy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
xgb = ["xgboost>=2.0"]
tune = ["optuna>=3.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4"]
all = ["xgboost>=2.0", "optuna>=3.0", "pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
pvforecast = "pvforecast.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvforecast"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
