[project]
name = "pvforecast"
dynamic = ["version"]
description = "PV-Ertragsprognose auf Basis historischer Daten und Wettervorhersage"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marcus" }]
keywords = ["pv", "solar", "forecast", "photovoltaic", "energy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "scipy>=1.11",
]

[project.optional-dependencies]
xgb = ["xgboost>=2.0"]
tune = ["optuna>=3.0"]
physics = ["pvlib>=0.10.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4"]
all = ["xgboost>=2.0", "optuna>=3.0", "pvlib>=0.10.0", "pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
pvforecast = "pvforecast.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pvforecast/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pvforecast"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]
exclude = ["src/pvforecast/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (require network access)",
]
